# kaggle-titanic

./: README.md  pyproject.toml
notebooks/: data_visualisations.ipynb
src/titanic/: check_missing.py  dataset.py  get_ranges.py
src/titanic/nn/: input.py  nn.py  train.py
